Add a big part of keybindings mentionned in the thread about keybindings in the tilem devel mailing list.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@351 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/keybindings.ini
+++ b/data/keybindings.ini
@@ -1,21 +1,25 @@
-[ti83]
+# This file does not include all suggestions mentionned in the keybindings mail (tilem-devel mailing list).
+# Some keybindings does not works, some other are lacking currently.
+# I finish it tomorrow maybe or later :)
 
-F1 = YEqu
-F2 = Window
-F3 = Zoom
-F4 = Trace
-F5 = Graph
 
-Control_L = 2nd
-F6        = Mode
-Delete    = Del
-KP_Delete = Del
+[all]
+# Soft keys F1 to F5
+F1 	  = YEqu
+F2 	  = Window
+F3        = Zoom
+F4 	  = Trace
+F5 	  = Graph
 
-Shift_L   = Alpha
-x         = Graphvar
-quoteleft = Graphvar
-s         = Stat
+# 2nd+soft keys    Shift+F1 to F5
+Shift+F1  = 2nd, YEqu
+Shift+F1  = 2nd, YEqu
+Shift+F2  = 2nd, Window
+Shift+F3  = 2nd, Zoom
+Shift+F4  = 2nd, Trace
+Shift+F5  = 2nd, Graph
 
+# Arrow keys       Arrow keys
 Up        = Up
 KP_Up     = Up
 Down      = Down
@@ -25,10 +29,194 @@ KP_Left   = Left
 Right     = Right
 KP_Right  = Right
 
+# Contrast         Shift+Up/Down
+Shift+Up   = 2nd, Up
+Shift+Down = 2nd, Down
+
+# 2nd              Tab
+Tab	  = 2nd
+
+# Del              Delete
+Delete    = Del
+
+# Clear            BackSpace or Shift+Delete
+KP_Delete = Del
+
+# BackSpace         = Left, Del ??? 
+BackSpace         = Clear
+
+# 0 to 9           0 to 9
+7                 = 7
+KP_7              = 7
+8                 = 8
+KP_8              = 8
+9                 = 9
+KP_9              = 9
+4                 = 4
+KP_4              = 4
+5                 = 5
+KP_5              = 5
+6                 = 6
+KP_6              = 6
+1                 = 1
+KP_1              = 1
+2                 = 2
+KP_2              = 2
+3                 = 3
+KP_3              = 3
+0                 = 0
+KP_0              = 0
+
+# .                period
+period            = DecPnt
+KP_Decimal        = DecPnt
+
+# (-)              tilde, dead_tilde, plusminus, or Shift+KP_Subtract
+# Shift_KP_Substract= (-) 
+
+# +                plus
+plus              = Add
+KP_Add            = Add
+
+# -                minus
+minus             = Sub
+KP_Subtract       = Sub
+
+# *                asterisk
+asterisk          = Mul
+KP_Multiply       = Mul
+
+# /                slash
+slash             = Div
+KP_Divide         = Div
+
+
+# ^                asciicircum or dead_circumflex
+#asciicircum	  = ^
+
+# X^2              twosuperior or Ctrl+2
+#ctrl+2		  = x^2 
+# [sqrt]
+
+# (                parenleft
+parenleft         = LParen
+# bracketleft       = LParen ??
+
+# )                parenright
+parenright        = RParen
+# bracketright      = RParen ??
+
+# Sto              greater (?)
+greater           = Store
+
+# [Rcl]           less (?)
+# ???
+less		  = 2nd,Store
+
+# Enter            Enter
+Return            = Enter
+KP_Enter          = Enter
+
+# [Entry]
+# On               F12
+F12		  = On
+
+# [Off]
+
+
+
+[all-with-alpha]
+Menu		  = Alpha
+apostrophe        = Alpha
+A     		  = Alpha, Math
+B      		  = Alpha, Matrix
+C     		  = Alpha, Prgm
+D    		  = Alpha, Recip
+E   		  = Alpha, Sin
+F   		  = Alpha, Cos
+G   		  = Alpha, Tan
+H   		  = Alpha, Power
+I   		  = Alpha, Square
+J  	 	  = Alpha, Comma
+K   		  = Alpha, LParen
+L   		  = Alpha, RParen
+M   		  = Alpha, Div
+N   		  = Alpha, Log
+O   		  = Alpha, 7
+P   		  = Alpha, 8
+Q   		  = Alpha, 9
+R   		  = Alpha, Mul
+S   		  = Alpha, Ln
+T   		  = Alpha, 4
+U   		  = Alpha, 5
+V   		  = Alpha, 6
+W   		  = Alpha, Sub
+X   		  = Alpha, Store
+Y   		  = Alpha, 1
+Z   		  = Alpha, 2
+space		  = Alpha, 0
+
+[all-except-ti73]
+# Sin              s (not 85/86)
+s		  = Sin
+
+# [Sin^-1]
+
+# Cos              c (not 85/86)
+c		  = Cos
+
+# [Cos^-1]
+# Tan              t (not 85/86)
+t		  = Tan
+# [Tan^-1]
+
+# Log              o (not 85/86)
+o		  = Log
+
+# [10^x]
+
+# Ln               l (not 85/86)
+l		  = Ln
+
+# [e^x]
+e		  = 2nd, Ln
+
+
+
+
+[ti82-ti83(+)-ti84+]
+#COMMON TO ALL MODELS, BUT METHODS OF ENTRY DIFFER
+#-------------------------------------------------
+# X^-1             backslash, onesuperior, or Ctrl+1
+# EE               ampersand or EuroSign
+# ,                comma
+comma		  = Comma
+# Pi               numbersign
+
+# Ins              Insert
+Insert		  = Insert
+
+# Quit             Shift+Escape
+Shift+Escape	  = 2nd,Mode
+
+
+
+Control_L = 2nd
+F6        = Mode
+
+equal             = 2nd, Math, 1
+KP_Equal          = Store
+l                 = Ln
+backslash         = Ln
+Shift_L   = Alpha
+x         = Graphvar
+quoteleft = Graphvar
+s         = Stat
+
+
 m                 = Math
 a                 = Matrix
 F7                = Matrix
-Tab               = Prgm
 F8                = Prgm
 v                 = Vars
 F9                = Vars
@@ -51,85 +239,172 @@ semicolon         = Square
 colon		  = Alpha, DecPnt
 twosuperior       = Square
 at                = Square
-comma             = Comma
-parenleft         = LParen
-bracketleft       = LParen
-parenright        = RParen
-bracketright      = RParen
-slash             = Div
-KP_Divide         = Div
-
 o                 = Log
 apostrophe        = Log
-7                 = 7
-KP_7              = 7
-8                 = 8
-KP_8              = 8
-9                 = 9
-KP_9              = 9
-asterisk          = Mul
-KP_Multiply       = Mul
-
-l                 = Ln
-backslash         = Ln
-4                 = 4
-KP_4              = 4
-5                 = 5
-KP_5              = 5
-6                 = 6
-KP_6              = 6
-minus             = Sub
-KP_Subtract       = Sub
-
-greater           = Store
-equal             = 2nd, Math, 1
-KP_Equal          = Store
-1                 = 1
-KP_1              = 1
-2                 = 2
-KP_2              = 2
-3                 = 3
-KP_3              = 3
-plus              = Add
-KP_Add            = Add
-
-BackSpace         = Left, Del
-0                 = 0
-KP_0              = 0
-period            = DecPnt
-KP_Decimal        = DecPnt
 underscore        = Chs
 Shift+KP_Subtract = Chs
-Return            = Enter
-KP_Enter          = Enter
 
 percent		  = 2nd, 0, Ln, Down, Down, Down, Down, Down, Down, Down, Down, Enter, 9
 
+#  2nd+Left        Home
+#  2nd+Right       End
+#  Alpha+Up        Page_Up
+#  Alpha+Down      Page_Down
+# Mode             Escape
+# X,T,Theta,n      x
+#  [Link]
+# Stat             F10
+#  [List]
+# Math             F6
+#  [Test]
+# Matrx/Apps       F7
+#  [Angle]
+# Prgm             F8
+#  [Draw]
+# Vars             F9
+#  [Y-Vars/Distr]
+#  [Abs/Fin/Mtrx]
+#  [{]             braceleft
+#  [}]             braceright
+#  [e]             e
+#  [Un-1/u]        u
+#  [Vn-1/v]        v
+#  [n/w]           n (82) / w (83)
+#  [[]             bracketleft
+#  [L4]
+#  [L5]
+#  [L6]
+#  []]             bracketright
+#  [L1]
+#  [L2]
+#  [L3]
+#  [Mem]
+#  [Catalog]
+#  [i]             i
+#  <Theta>         at
+#  <">             quotedbl
+#  <:>             colon
+#  <?>             question
 
-A     = Alpha, Math
-B     = Alpha, Matrix
-C     = Alpha, Prgm
-D     = Alpha, Recip
-E     = Alpha, Sin
-F     = Alpha, Cos
-G     = Alpha, Tan
-H     = Alpha, Power
-I     = Alpha, Square
-J     = Alpha, Comma
-K     = Alpha, LParen
-L     = Alpha, RParen
-M     = Alpha, Div
-N     = Alpha, Log
-O     = Alpha, 7
-P     = Alpha, 8
-Q     = Alpha, 9
-R     = Alpha, Mul
-S     = Alpha, Ln
-T     = Alpha, 4
-U     = Alpha, 5
-V     = Alpha, 6
-W     = Alpha, Sub
-X     = Alpha, Store
-Y     = Alpha, 1
-Z     = Alpha, 2
-space = Alpha, 0
+[ti73]
+Home		 = 2nd+Left         
+End		 = 2nd+Right 
+Escape		 = Mode
+m 		 = Math             
+apostrophe	 = [Text]
+d		 = Draw
+# [Trig]
+l		 = List             l
+# [Stat]
+F8		 = Prgm
+# [Catalog]
+F7		 = Apps
+# [Vars]
+underscore	 = Unit
+# [Convert]
+# b/c              bar, brokenbar, or onehalf
+# F<>D             f
+# Ab/c<>d/e        a
+# Const            c
+# [Set]
+# Simp             s
+s		 = Simp 
+#%                percent
+Percent		 = percent
+# [Int/]
+# X                x
+x		 = X
+# [Mem]
+
+
+[ti76]
+Home		 = 2nd+Left         
+End		 = 2nd+Right 
+Escape		 = Mode
+m 		 = Math             
+apostrophe	 = Texte
+d		 = Draw
+# x,n              x
+# [Echanger]
+F10		 = Stats
+# [Listes]
+F6		 = Math
+# [Tests]
+F7		 = Angle
+F8		 = Prgm
+# [Dessin]
+F9		 = Var
+# [{]             braceleft
+# [}]             braceright
+# [e]             e
+# [u_n]           u
+# [v_n]           v
+# [w_n]           w
+# [Mem]
+# [Catalog]
+
+
+[ti81]
+#X|T              x
+#Mode
+F6		 = Math
+# [Test]
+F7		 = Matrix
+# [Stat]
+F8		 = Prgm
+# [Draw]
+F9		 = Vars
+# [Y-Vars]
+# [Abs]
+# [[A]]
+# [[B]]
+# [[C]]
+# [Reset]
+# [{x}]
+# [{y}]
+# <Theta>         at
+# <">             quotedbl
+# <?>             question
+
+
+
+
+
+[ti85-ti86]
+# 2nd+Left        Home
+#  2nd+Right       End
+# Exit             Escape
+# More             Page_Down
+#  [Mode]
+# x-Var
+#  [Link]
+#  <x-Var>
+# Graph            F6
+#  [Solver]
+# Stat/Table       F7
+#  [Simult]
+# Prgm             F8
+#  [Poly]
+# Custom           F9
+#  [Catalog]
+#  [Toler]
+#  [[]             bracketleft
+#  []]             bracketright
+#  [Calc]
+#  [Matrx]
+#  [Vectr]
+#  [Cplx]
+#  [Math]
+#  [angle]
+#  [Cons]
+#  [Conv]
+#  [Strng]
+#  [List]
+#  [Base]
+#  [Test]
+#  [Vars/Mem]
+#  [Mem/Stat]
+#  [Char]
+#  [:]             colon
+#  <=>             equal
+# <a> to <z>      a to z
