Add new functions for file chooser dialogs.
These are based on the functions used by the Flashbook UI, and provide
standard, well-behaved "open" and "save" dialogs with a simple API.
On Windows, the standard "common" dialogs are used.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@361 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -43,6 +43,7 @@ objects = tilem2.o \
 	disasmview.o \
 	emulator.o \
 	event.o \
+	filedlg.o \
 	files.o \
 	gifencod.o \
 	icons.o \
@@ -169,7 +170,9 @@ keybindings.o: keybindings.c files.h $(common_headers)
 menu.o: menu.c $(common_headers)
 	$(compile) -c $(srcdir)/menu.c
 
-
+# File open/save dialogs
+filedlg.o: filedlg.c filedlg.h
+	$(compile) -c $(srcdir)/filedlg.c
 
 # TI-81 program file functions
 ti81prg.o: ti81prg.c ti81prg.h ../emu/tilem.h
