add Backspace = Left, Del   and p = Prgm  as keybindings.We don't really talk about these keybindings in mailing list thread and I like these keybindings. But you can change it if you want.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@383 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/keybindings.ini
+++ b/data/keybindings.ini
@@ -14,7 +14,7 @@ KP_Tab            = 2nd
 ISO_Left_Tab      = 2nd
 Delete            = Del
 KP_Delete         = Del
-BackSpace         = Clear
+BackSpace         = Left, Del
 0                 = 0
 KP_0              = 0
 1                 = 1
@@ -93,6 +93,7 @@ l                 = List
 ampersand         = 2nd, Power
 EuroSign          = 2nd, Power
 F8                = Prgm
+p                 = Prgm
 Ctrl+Tab          = 2nd, Prgm
 Ctrl+KP_Tab       = 2nd, Prgm
 Ctrl+ISO_Left_Tab = 2nd, Prgm
@@ -161,6 +162,7 @@ u                 = 2nd, 7
 v                 = 2nd, 8
 w                 = 2nd, 9
 l                 = Ln
+p                 = Prgm
 Ctrl+Tab          = 2nd, 0
 Ctrl+KP_Tab       = 2nd, 0
 Ctrl+ISO_Left_Tab = 2nd, 0
@@ -197,6 +199,7 @@ brokenbar    = 2nd, Recip
 s            = Sin
 c            = Cos
 t            = Tan
+p            = Prgm
 numbersign   = 2nd, Power
 ampersand    = EE
 EuroSign     = EE
@@ -283,6 +286,7 @@ v            = 2nd, 8
 n            = 2nd, 9
 bracketleft  = 2nd, Mul
 l            = Ln
+p            = Prgm
 bracketright = 2nd, Sub
 A            = Alpha, Math
 B            = Alpha, Matrix
@@ -365,6 +369,7 @@ o                 = Log
 u                 = 2nd, 7
 v                 = 2nd, 8
 w                 = 2nd, 9
+p                 = Prgm
 bracketleft       = 2nd, Mul
 l                 = Ln
 bracketright      = 2nd, Sub
@@ -486,6 +491,7 @@ bracketleft       = 2nd, LParen
 bracketright      = 2nd, RParen
 comma             = Comma
 colon             = 2nd, DecPnt
+p                 = Prgm
 A                 = Alpha, Log
 B                 = Alpha, Sin
 C                 = Alpha, Cos
