--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -71,7 +71,7 @@ compile = $(CC) -I$(top_builddir) -I$(srcdir) $(CFLAGS) $(DEFS) \
 link = $(CC) $(CFLAGS) $(LDFLAGS) $(GUI_LDFLAGS)
 
 common_headers = ../config.h ../emu/tilem.h ../db/tilemdb.h \
-	gui.h emulator.h emuwin.h debugger.h skinops.h debuginfo.h gtk-compat.h msgbox.h
+	gui.h emulator.h debugger.h emuwin.h skinops.h debuginfo.h gtk-compat.h msgbox.h
 
 all: tilem2@EXEEXT@
 
