--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -60,6 +60,7 @@ objects = tilem2.o \
 	skinops.o \
 	ti81prg.o \
 	menu.o \
+	rcvmenu.o \
 	tool.o
 
 libs = $(TILEMDB_LIBS) $(TILEMCORE_LIBS) $(GTK_LIBS) $(TICALCS_LIBS) $(LIBS)
@@ -174,6 +175,13 @@ keybindings.o: keybindings.c files.h $(common_headers)
 # Menu
 menu.o: menu.c $(common_headers)
 	$(compile) -c $(srcdir)/menu.c
+
+
+# Menu
+rcvmenu.o: rcvmenu.c $(common_headers)
+	$(compile) -c $(srcdir)/rcvmenu.c
+
+
 
 # File open/save dialogs
 filedlg.o: filedlg.c filedlg.h
