Fix a typo in keybindings
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@404 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/keybindings.ini
+++ b/data/keybindings.ini
@@ -432,7 +432,7 @@ CapsLock+s = Alpha, Alpha, Ln
 CapsLock+t = Alpha, Alpha, 4
 CapsLock+u = Alpha, Alpha, 5
 CapsLock+v = Alpha, Alpha, 6
-CapsLock+w = Alpha, Alpha, Subp
+CapsLock+w = Alpha, Alpha, Sub
 CapsLock+x = Alpha, Alpha, Store
 CapsLock+y = Alpha, Alpha, 1
 CapsLock+z = Alpha, Alpha, 2
