Add binding for colon (alpha,decpnt) on 82/83
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@411 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/keybindings.ini
+++ b/data/keybindings.ini
@@ -317,6 +317,7 @@ Z            = Alpha, 2
 at           = Alpha, 3
 quotedbl     = Alpha, Add
 space        = Alpha, 0
+colon        = Alpha, DecPnt
 question     = Alpha, Chs
 
 [ti83]
@@ -406,6 +407,7 @@ Z                 = Alpha, 2
 at                = Alpha, 3
 quotedbl          = Alpha, Add
 space             = Alpha, 0
+colon             = Alpha, DecPnt
 question          = Alpha, Chs
 
 [ti83p]
