Fix build on Windows, ensure we link with comdlg32
(Apparently -mwindows also implies -lcomdlg32, but let's also add
comdlg32 to LIBS so that it will work even if we build it as a console
program.)


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@415 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -16,7 +16,7 @@ CC = @CC@
 CFLAGS = @CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 DEFS = @DEFS@
-GUI_LDFLAGS = @LDFLAGS@
+GUI_LDFLAGS = @GUI_LDFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 
