Separate the getting var code in the getvar.c file
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@437 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -61,6 +61,7 @@ objects = tilem2.o \
 	ti81prg.o \
 	menu.o \
 	rcvmenu.o \
+	getvar.o \
 	tool.o
 
 libs = $(TILEMDB_LIBS) $(TILEMCORE_LIBS) $(GTK_LIBS) $(TICALCS_LIBS) $(LIBS)
@@ -177,10 +178,13 @@ keybindings.o: keybindings.c files.h $(common_headers)
 menu.o: menu.c $(common_headers)
 	$(compile) -c $(srcdir)/menu.c
 
-
 # Menu
 rcvmenu.o: rcvmenu.c $(common_headers)
 	$(compile) -c $(srcdir)/rcvmenu.c
+
+# Handle getting vars
+getvar.o: getvar.c $(common_headers)
+	$(compile) -c $(srcdir)/getvar.c
 
 
 
