Automatically rebuild Makefiles when necessary (Works at least with GNU make; I'm not sure if this works with all versions of make, but it shouldn't break anything)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@450 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/db/Makefile.in
+++ b/db/Makefile.in
@@ -18,6 +18,7 @@ CFLAGS = @CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 DEFS = @DEFS@
 RANLIB = @RANLIB@
+SHELL = @SHELL@
 
 objects = disasm.o listing.o lstfile.o
 
@@ -47,4 +48,12 @@ clean:
 	rm -f *.o
 	rm -f libtilemdb.a
 
+
+Makefile: Makefile.in $(top_builddir)/config.status
+	cd $(top_builddir) && $(SHELL) ./config.status
+
+$(top_builddir)/config.status: $(top_srcdir)/configure
+	cd $(top_builddir) && $(SHELL) ./config.status --recheck
+
+.PRECIOUS: Makefile $(top_builddir)/config.status
 .PHONY: all clean
