--- a/Makefile.in
+++ b/Makefile.in
@@ -11,6 +11,7 @@ top_srcdir = @top_srcdir@
 srcdir = @srcdir@
 VPATH = @srcdir@
 @SET_MAKE@
+SHELL = @SHELL@
 
 all:
 	cd emu && $(MAKE)
@@ -28,4 +29,11 @@ distclean: clean
 	rm -rf autom4te.cache
 	rm -f Makefile emu/Makefile db/Makefile gui/Makefile
 
+Makefile: Makefile.in config.status
+	$(SHELL) ./config.status
+
+config.status: configure
+	$(SHELL) ./config.status --recheck
+
+.PRECIOUS: Makefile config.status
 .PHONY: all clean distclean
