Use calculator character sets in memory view
This is using the ticonv character tables (except for the TI-81.)
We might want to change this in the future.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@458 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -42,6 +42,7 @@ objects = tilem2.o \
 	args.o \
 	breakpoints.o \
 	config.o \
+	charmap.o \
 	debugger.o \
 	disasmview.o \
 	emulator.o \
@@ -202,6 +203,9 @@ filedlg.o: filedlg.c filedlg.h
 ti81prg.o: ti81prg.c ti81prg.h ../emu/tilem.h
 	$(compile) -c $(srcdir)/ti81prg.c
 
+# Character conversion
+charmap.o: charmap.c charmap.h ../emu/tilem.h
+	$(compile) -c $(srcdir)/charmap.c
 
 
 install: testemu2
