Add preferences dialog.
This includes options to enable or disable grayscale, smooth scaling
in the GUI, and speed limiting.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@468 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -59,6 +59,7 @@ objects = tilem2.o \
 	memmodel.o \
 	memory.o \
 	pbar.o \
+	preferences.o \
 	screenshot.o \
 	skin.o \
 	skinops.o \
@@ -124,6 +125,10 @@ emuwin.o: emuwin.c $(common_headers)
 # Handle events
 event.o: event.c $(common_headers)
 	$(compile) -c $(srcdir)/event.c
+
+# Preferences dialog
+preferences.o: preferences.c $(common_headers)
+	$(compile) -c $(srcdir)/preferences.c 
 
 # Open skin (skn format file) originally created by Julien Blache and Romain Lievins
 skinops.o: skinops.c skinops.h 
