Add a popup menu to the disassembly view.
Currently this has options to toggle a breakpoint at the selected
address, to jump to the PC, and to jump to an arbitrary address.

Also, define common functions for address parsing and formatting, to
reduce duplication.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@482 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -37,6 +37,7 @@ DEF_SHARE_DIR = -DSHARE_DIR=\"$(pkgdatadir)\" \
 	-DUNINSTALLED_SHARE_DIR=\"$(top_srcdir)/data\"
 
 objects = tilem2.o \
+	address.o \
 	animatedgif.o \
 	animation.o \
 	args.o \
@@ -105,6 +106,10 @@ memmodel.o: memmodel.c memmodel.h $(common_headers)
 # Breakpoint dialog
 breakpoints.o: breakpoints.c $(common_headers)
 	$(compile) -c $(srcdir)/breakpoints.c
+
+# Utility functions for debugging
+address.o: address.c $(common_headers)
+	$(compile) -c $(srcdir)/address.c
 
 # Keypad dialog
 keypaddlg.o: keypaddlg.c $(common_headers)
