New core loop / task system.
Essentially, this allows the GUI to schedule "tasks" to be run in the
core thread; if no task is running, emulation runs normally.  Task
functions have direct access to the calculator, including the ability
to run the CPU (using the new emucore API.)

This should make it possible to implement linking and macros in a more
sane way.  All of the old linking code is not working at this point.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@493 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -47,6 +47,7 @@ objects = tilem2.o \
 	debugger.o \
 	disasmview.o \
 	emulator.o \
+	emucore.o \
 	emuwin.o \
 	event.o \
 	filedlg.o \
@@ -119,11 +120,15 @@ keypaddlg.o: keypaddlg.c $(common_headers)
 memory.o: memory.c ../emu/tilem.h
 	$(compile) -c $(srcdir)/memory.c
 
-# Main emulation loop
-emulator.o: emulator.c $(common_headers)
+# Emulator management
+emulator.o: emulator.c emucore.h $(common_headers)
 	$(compile) -c $(srcdir)/emulator.c
 
-# Print the skin and add the events. 
+# Emulator main loop
+emucore.o: emucore.c emucore.h $(common_headers)
+	$(compile) -c $(srcdir)/emucore.c
+
+# Emulator GUI (main window)
 emuwin.o: emuwin.c $(common_headers)
 	$(compile) -c $(srcdir)/emuwin.c
 
