New send-file functions using new task API.
There shouldn't be much difference from the old code as far as the
user is concerned.

Macros and receiving files are still broken.  Most of the receiving
code has been disabled for now just to get it to compile.



git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@494 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -157,7 +157,7 @@ config.o: config.c files.h $(common_headers)
 	$(compile) -c $(srcdir)/config.c
 
 # Handle internal link
-link.o: link.c ti81prg.h $(common_headers)
+link.o: link.c emucore.h ti81prg.h $(common_headers)
 	$(compile) -c $(srcdir)/link.c
 
 # Handle macro
