The file loading inside a macro is working correctly. I've removed a lot of useless printf (old debug). Delete debuginfo.h file.Add some comments
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@512 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -79,7 +79,7 @@ link = $(CC) $(CFLAGS) $(LDFLAGS) $(GUI_LDFLAGS)
 
 common_headers = ../config.h ../emu/tilem.h ../db/tilemdb.h \
 	gui.h emulator.h debugger.h emuwin.h skinops.h animation.h \
-	debuginfo.h gtk-compat.h msgbox.h
+	gtk-compat.h msgbox.h
 
 all: tilem2@EXEEXT@
 
