Add functions for automatically resizing fixed tree view columns.
Rather than hard-coding column sizes, we use sample data to compute
the size each column actually requires, which in most cases will
depend on the user's theme and font settings.

The memory view, stack view, breakpoint editor, and variable list have
been adapted to use these functions.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@529 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -52,6 +52,7 @@ objects = tilem2.o \
 	event.o \
 	filedlg.o \
 	files.o \
+	fixedtreeview.o \
 	gifencod.o \
 	icons.o \
 	keybindings.o \
@@ -80,7 +81,7 @@ link = $(CC) $(CFLAGS) $(LDFLAGS) $(GUI_LDFLAGS)
 
 common_headers = ../config.h ../emu/tilem.h ../db/tilemdb.h \
 	gui.h emulator.h debugger.h emuwin.h skinops.h animation.h \
-	gtk-compat.h msgbox.h
+	gtk-compat.h msgbox.h fixedtreeview.h
 
 all: tilem2@EXEEXT@
 
@@ -211,6 +212,10 @@ sendfile.o: sendfile.c emucore.h $(common_headers)
 # File open/save dialogs
 filedlg.o: filedlg.c filedlg.h
 	$(compile) -c $(srcdir)/filedlg.c
+
+# Fixed-width tree view
+fixedtreeview.o: fixedtreeview.c fixedtreeview.h
+	$(compile) -c $(srcdir)/fixedtreeview.c
 
 # TI-81 program file functions
 ti81prg.o: ti81prg.c ti81prg.h ../emu/tilem.h
