Add an option to switch between logical/absolute modes.
Move the memory view into its own file.

When switching modes, we preserve the current cursor position in the
memory view (as well as in the disassembly view.)  It would be good to
preserve the view position as well - i.e., the same bytes should be on
screen before and after switching modes, assuming there are no page
boundaries involved - but gtk_tree_view_scroll_to_cell() seems not to
work properly immediately after the model has been changed (?) and
there doesn't seem to be any way of setting the cursor that doesn't
also select and scroll to the given cell.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@541 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -60,6 +60,7 @@ objects = tilem2.o \
 	link.o \
 	macro.o \
 	memmodel.o \
+	memview.o \
 	memory.o \
 	pbar.o \
 	preferences.o \
@@ -93,12 +94,16 @@ tilem2.o: tilem2.c icons.h files.h $(common_headers)
 	$(compile) -c $(srcdir)/tilem2.c
 
 # Debugger
-debugger.o: debugger.c disasmview.h memmodel.h $(common_headers)
+debugger.o: debugger.c disasmview.h $(common_headers)
 	$(compile) -c $(srcdir)/debugger.c
 
 # Disassembly view
 disasmview.o: disasmview.c disasmview.h $(common_headers)
 	$(compile) -c $(srcdir)/disasmview.c
+
+# Memory view
+memview.o: memview.c memmodel.h $(common_headers)
+	$(compile) -c $(srcdir)/memview.c
 
 # Tree model interface for calc memory
 memmodel.o: memmodel.c memmodel.h $(common_headers)
