--- a/configure.ac
+++ b/configure.ac
@@ -135,5 +135,6 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile
                  emu/Makefile
                  db/Makefile
+                 data/Makefile
                  gui/Makefile])
 AC_OUTPUT
