Add an index.theme.
This is required for loading custom icons on Windows (or any other
system that doesn't have the hicolor theme installed.)  It shouldn't
cause any problems on systems that do.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@566 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -40,6 +40,7 @@ install:
 	  $(INSTALL_DATA) $$j $(DESTDIR)$(pkgdatadir)/icons/$$i ; \
 	 done ; \
 	done
+	$(INSTALL_DATA) $(srcdir)/icons/hicolor/index.theme $(DESTDIR)$(pkgdatadir)/icons/hicolor
 
 uninstall:
 	rm -rf $(DESTDIR)$(pkgdatadir)
