Install data in PREFIX/share/tilem2.
This way we avoid any potential conflict with an old TilEm
installation.

On Windows, use EXEDIR/share/tilem2, to follow the practice used by
GTK+ and other libraries.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@569 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,7 +3,7 @@ exec_prefix = @exec_prefix@
 datarootdir = @datarootdir@
 bindir = @bindir@
 datadir = @datadir@
-pkgdatadir = @datadir@/@PACKAGE_TARNAME@
+pkgdatadir = @datadir@/tilem2
 mandir = @mandir@
 
 top_builddir = @top_builddir@
