--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,29 @@
 AC_PREREQ(2.67)
 AC_INIT([TilEm], [pre-release], [tilem-devel@lists.sourceforge.net],
   [tilem], [http://tilem.sourceforge.net/])
+
 AC_CONFIG_SRCDIR([emu/tilem.h])
+
+
+AC_CHECK_HEADERS([stdint.h stdlib.h string.h strings.h unistd.h wchar.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_HEADER_STDC
+AC_HEADER_STDBOOL
+AC_C_BIGENDIAN
+AC_C_RESTRICT
+AC_C_INLINE
+AC_TYPE_SIZE_T
+AC_TYPE_UINT16_T
+AC_TYPE_UINT32_T
+AC_TYPE_UINT64_T
+AC_TYPE_UINT8_T
+AC_TYPE_UINTPTR_T
+
+# Checks for library functions.
+AC_FUNC_MALLOC
+AC_FUNC_REALLOC
+AC_CHECK_FUNCS([memmove memset pow strchr strerror strrchr strtol])
 
 # Checks for programs
 
@@ -75,8 +97,9 @@ fi
 
 AC_SUBST(GUI_LDFLAGS)
 
+AC_CHECK_LIB(gtk-x11-2.0, gtk_init)
 with_flags(GTK,
-  [ AC_CHECK_FUNC(gtk_init, [ have_gtk=yes ], [ have_gtk=no ]) ])
+  [ AC_CHECK_LIB(gtk-x11-2.0, gtk_init, [ have_gtk=yes ], [ have_gtk=no ]) ])
 if test "x$have_gtk" != "xyes" ; then
   AC_MSG_ERROR([GTK+ 2.x libraries not found or not usable.
 You must install a recent version of GTK+ 2.x, including the
@@ -110,8 +133,9 @@ if test "x$TICALCS_LIBS" = "x" &&
     [ : ])
 fi
 
+AC_CHECK_LIB(ticalcs2, $init_function)
 with_flags(TICALCS,
-  [ AC_CHECK_FUNC($init_function, [ have_ticalcs=yes ], [ have_ticalcs=no ]) ])
+  [ AC_CHECK_LIB(ticalcs2, $init_function, [ have_ticalcs=yes ], [ have_ticalcs=no ]) ])
 if test "x$have_ticalcs" != "xyes" ; then
   AC_MSG_ERROR([libticalcs2/libcalcprotocols not found or not usable.
 You must install one of these two libraries, including the
@@ -147,17 +171,6 @@ if test "x$gtk_target" = "xwin32" ; then
   AC_SUBST(TICALCS_BINDIR)
   AC_SUBST(DLLPATH)
 fi
-
-# Checks for header files
-
-AC_HEADER_STDC
-
-# Checks for system and compiler characteristics
-
-AC_C_BIGENDIAN
-AC_C_INLINE
-AC_C_RESTRICT
-AC_TYPE_UINTPTR_T
 
 # Output
 
